# mcp-tools

k8s-mcp-server/k8s-mcp-server/: .gitignore  README.md  client.py  pyproject.toml  server.py
mcp-tools/: agents.py  pyproject.toml  server.py
