[project]
name = "mcp-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "groq>=0.24.0",
    "langchain>=0.3.25",
    "langchain-groq>=0.3.2",
    "langchain-mcp-adapters>=0.0.11",
    "langgraph>=0.4.3",
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.1.0",
    "yfinance>=0.2.55",
]
